Updated styles for spotlight Fixed dark mode colors

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body.dark {
   --emph10:#666;
   --emph11:#555;
   --emph12:#444;
-  --emph13:#333;
+  --emph13:#444;
   --emph14:#333;
   --emph15:#383838;
   --emph16:#f5f5f5;
@@ -332,6 +332,7 @@ h2 {
   font-family: Space, Helvetica, sans-serif, bold;
   font-size: 40px;
   margin: 1.5em 0 0.5em 0;
+  font-weight: 900;
   /* letter-spacing: -0.02em; */
 }
 
@@ -453,14 +454,46 @@ h1#title.long-name {
   margin-bottom: 55px !important;
 }*/
 
-.wp-block-columns ul {
+#post-1472 .wp-block-columns ul {
   padding-left: 0;
 }
 
-@media (min-width: 782px) {
-  .wp-block-column:not(:first-child) {
-    margin-left: 4em !important;
-  }
+#post-1472 .wp-block-column:not(:first-child) {
+  margin-left: min(3em, 6%) !important;
+}
+
+#post-1472 h2 {
+  margin-top: 0;
+  line-height: 1;
+  margin-bottom: 0.2em;
+  text-decoration: none !important;
+}
+
+#post-1472 h2 a {
+  text-decoration: none !important;
+}
+
+
+#post-1472 h3 {
+  margin-top: 0;
+  line-height: 1;
+  margin-bottom: 0.2em;
+  font-weight: 300;
+}
+
+#post-1472 strong {
+  color: var(--emph1);
+}
+
+#post-1472 ul.emphasis {
+  list-style-type: "→ ";
+}
+
+#post-1472 ul.emphasis li::marker {
+  font-weight: bold;
+  color: var(--emph1);
+  display: block;
+  transform: translate(-1em);
 }
 
 figcaption,
